[PERPICK-074] Accord 테이블 삭제에 따른 리팩토링